--- a/templates/review.html
+++ b/templates/review.html
@@ -20,15 +20,15 @@
         <p>Overall experience (scale of 1 through 5)</p>
         <div class="rating">
         <input type="radio" name="star" value="1" id="one-star">
-        <label for="one-star">One<span class="fa fa-star"></span></label>
+        <label for="one-star"><span class="fa fa-star" id="star1" value="1"></span></label>
         <input type="radio" name="star" value="2" id="two-star">
-        <label for="two-star">Two<span class="fa fa-star"></span></label>
+        <label for="two-star"><span class="fa fa-star" id="star2" value="2"></span></label>
         <input type="radio" name="star" value="3" id="three-star">
-        <label for="three-star">Three<span class="fa fa-star"></span></label>
+        <label for="three-star"><span class="fa fa-star" id="star3" value="3"></span></label>
         <input type="radio" name="star" value="4" id="four-star">
-        <label for="four-star">Four<span class="fa fa-star"></span></label>
+        <label for="four-star"><span class="fa fa-star" id="star4" value="4"></span></label>
         <input type="radio" name="star" value="5" id="five-star">
-        <label for="five-star">Five<span class="fa fa-star"></span></label>      
+        <label for="five-star"><span class="fa fa-star" id="star5" value="5"></span></label>      
         </div> 
     </div>
     <div>
@@ -44,5 +44,7 @@
     </form>
 </fieldset>
   
+<!-- <script src="/static/scripts/index.js" default></script> -->
+<script src="/static/scripts/review.js"></script>
 
 {% endblock %}
