--- a/templates/account.html
+++ b/templates/account.html
@@ -97,7 +97,7 @@
   </div>
  </div> 
 
- <!-- <script src="/static/scripts/index.js" default></script> -->
+ <!-- script -->
 <script src="/static/scripts/profile.js"></script>
 
 {% endblock %}
