--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -50,13 +50,13 @@
       {% for rating in ratings%}
       <div>
       <h5>Score <span class="stars" id="{{rating.rating}}"></span></h5>
-      <p> {{rating.review}}</p>
+      <p class="quotes"> {{rating.review}}</p>
     </div>
     {% endfor %}
     </div>
 </div>
 
-<!-- <script src="/static/scripts/index.js" default></script> -->
+<!-- script -->
 <script src="/static/scripts/map.js"></script>
 <script async
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIU5CFOSTh6g_Mue4VOphmlQQ-fzlgOxs&libraries=places&callback=initMap">
