--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -30,12 +30,12 @@
       <section class="map">
         <h5>{{tour.port_name}}</h5>
         <div id="map" class="{{tour.state_name}}"></div>
-        <span>
-        <h5>Explore</h5>
+        <div >
+        <h5 class="explore">Explore: </h5>
         <button class="btn btn-success" id="museums">Museums</button>
         <button class="btn btn-info" id="cafe">Cafe</button>
         <button class="btn btn-danger" id="restaurants">Restaurants</button>
-      </span>
+        </div>
     </section>
     </div>
   </div>
