--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,44 +2,44 @@
 {% block title %}Nautical Tours{% endblock %}
 
 {% block body %}
-
-<p id="title">Sign-Up to sail away with us</p>
+<div class="container">
 
 <!--Create New Account-->
-<fieldset>
-  <h3 id="Account">Sign-Up</h3>
-
+<fieldset class="cols spacing">
+    <div class="row loginPage">
+  <h2 class="accountHeader">Sign-Up</h2>
+</div>
   <form action="/users" method="POST">
     
-    <div>
-        <span>
-            <input type="text" name="fname" placeholder="first name" required>
-            <input type="text" name="lname" placeholder="last name" required>
-        </span>
+    <div class="row loginPage">
+            <input class="blockone" type="text" name="fname" placeholder="first name" required>
+            <input class="blockone"type="text" name="lname" placeholder="last name" required>
     </div>
-    <div>
-        <input type="text" name="email" placeholder="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>    
+    <div class="row loginPage">
+        <input class="blocktwo" type="text" name="email" placeholder="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>    
     </div>
-    <div>
-        <input type="password" name="password" placeholder="password"  required>
+    <div class="row loginPage">
+        <input class="blocktwo" type="password" name="password" placeholder="password"  required>
     </div>
-    <div>
+    <div class="row loginPage">
         <label for="phone" class="label">Phone</label>
-        <div>       
-        <input type="tel" id="phone" name="phone" placeholder="555-555-5555" pattern="1? ?[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
         </div>
+        <div class="row loginPage">       
+        <input class="blocktwo" type="tel" id="phone" name="phone" placeholder="555-555-5555" pattern="1? ?[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
     </div>
     <!--Create New Account Birthday-->
+    <div class="row loginPage">
     <label for="birthday" class="label">Birthday</label>
-    <div>
-        <input type="date" id="birthday" name="birthday" required>
+    </div>
+    <div class="row loginPage">
+        <input class="blocktwo" type="date" id="birthday" name="birthday" required>
     </div>
      <!--Form:submit button-->
-     <p>
-     <input type="submit" value="Sign Up" class="btn btn-primary" id="sign-up">
+     <p class="row loginPage final">
+        <input type="submit" value="Log In" class="btn btn-primary" id="login-button">
     </p>
     </form>
 </fieldset>
-  
+</div>
 
 {% endblock %}
