--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 
 <!-- Comments Here -->
 
-    <fieldset class="cols">
+    <fieldset class="cols spacing" id="fields">
       <div class="row sendgrid">
         <h2>Contact Form</h2>
       </div>
