--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <!-- <h1 id="Account">Account</h1> -->
 
 <!--Log In to Account-->
-<fieldset class="cols spacing">
+<fieldset class="cols spacing" id="fields">
   <div class="row loginPage">
   <h2 class="accountHeader">Account Login</h2>
 </div>
