--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -5,9 +5,9 @@
 <div class="container">
 
 <!--Create New Account-->
-<fieldset class="cols spacing">
+<fieldset class="cols spacing" id="fields">
     <div class="row loginPage">
-  <h2 class="accountHeader">Sign-Up</h2>
+  <h2 id="accountHeader">Sign-Up</h2>
 </div>
   <form action="/users" method="POST">
     <div class="row loginPage">
