--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -83,7 +83,8 @@ html, body {
 }
 
 .profile{
-  background-color: rgba(200, 200, 200, 0.5);
+  border: 1px solid rgba(200, 200, 200, 0.5);
+  background-color: rgba(240, 240, 240, 0.5);
 }
 
 #reviewing{
