completed about page TODO tour pages Homepage

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,11 +2,11 @@
 {% block title %}Nautical Tours{% endblock %}
 
 {% block body %}
-<div class="container">
-<h1>About!</h1>
+<div class="container aboutPage">
+<h1 id="accountHeader">About</h1>
 
 <!-- Loop through ipsum and put a couple genetic photos in here.  -->
-<p>Link to ports and how they were discovered or other filler. All tours leave from San Francisco Harbor. </p>
+<p id="about">This is a family run business that has been leading tours for almost 30 years. We have applied our ever-growing mastery of adventure seeking, fine cuisine, and safety standards. Every decade we learn something new and love adding new adventures. We love feed back, so please drop us a line below.</p>
 
 <!-- Comments Here -->
 
