--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -4,7 +4,6 @@ html, body {
   height: 100%;
 }
 
-
 #map {
   width: 100%;
   height: 250px;
@@ -56,22 +55,21 @@ html, body {
   min-height: 80px;
 }
 
-#plain{
-  border: 1px solid black;
-}
-
 #fields{
   border: 1px solid rgba(200, 200, 200, 0.5);
   width: 400px;
-  margin: 30px auto 0px;
-  background-color: rgba(240, 240, 240, 0.5);
+  margin: 30px auto 30px;
+  background-color: rgba(240, 240, 240, 0.6);
 }
-
 
 .sendgrid, .loginPage, #welcome, #accountHeader{
   margin: auto;
   display: flex;
   justify-content: center;
+}
+
+#welcome{
+  padding: 10px 0px;
 }
 
 .spacing{
@@ -85,9 +83,30 @@ html, body {
 .profile{
   border: 1px solid rgba(200, 200, 200, 0.5);
   background-color: rgba(240, 240, 240, 0.5);
+  min-width: 640px;
+  margin:auto;
 }
 
 #reviewing{
   border: 1px solid rgba(200, 200, 200, 0.5);
   background-color:  rgba(253, 253, 253);
+}
+
+#logout-button {
+  margin: 30px auto;
+}
+
+#about{
+  text-align: justify;
+  text-shadow: 1px 1px 2px whitesmoke;
+  font-weight: 490;
+}
+
+.aboutPage{
+  background-image: url("/static/img/aboutMap.jpeg");
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: cover;
+  object-position: center;
+  overflow: hidden;
 }
