completed about page TODO tour pages Homepages

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 <div class="container aboutPage">
 <h1 id="accountHeader">About</h1>
 
-<!-- Loop through ipsum and put a couple genetic photos in here.  -->
+<!-- main about section below  -->
 <p id="about">This is a family run business that has been leading tours for almost 30 years. We have applied our ever-growing mastery of adventure seeking, fine cuisine, and safety standards. Every decade we learn something new and love adding new adventures. We love feed back, so please drop us a line below.</p>
 
 <!-- Comments Here -->
