test push TODO hompage tourpage

--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -20,7 +20,7 @@
       <div>Sidebar/Navbar/Description</div>
       <ul>
         <li>Please explore the Port Trip locals</li>
-        <li>Let us know which you like most!</li>
+        <li>pull from Let us know which you like most!</li>
       </ul>
      
     </div>
