review section completed TODO details description date

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 <h1 id="accountHeader">About</h1>
 
 <!-- main about section below  -->
-<p id="about">This is a family run business that has been leading tours for almost 30 years. We have applied our ever-growing mastery of adventure seeking, fine cuisine, and safety standards. Every decade we learn something new and love adding new adventures. We love feed back, so please drop us a line below.</p>
+<p class="about">This is a family run business that has been leading tours for almost 30 years. We have applied our ever-growing mastery of adventure seeking, fine cuisine, and safety standards. Every decade we learn something new and love adding new adventures. We love feed back, so please drop us a line below.</p>
 
 <!-- Comments Here -->
 
