--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 <!--Log In to Account-->
 <fieldset class="cols spacing" id="fields">
   <div class="row loginPage">
-  <h2 class="accountHeader">Account Login</h2>
+  <h2 id="accountHeader">Account Login</h2>
 </div>
   <form action="/login" method="POST">
     
