--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -15,6 +15,7 @@ html, body {
   text-align: justify;
 }
 
+
 .mapButtons{
   margin: 10px auto;
 }
@@ -49,7 +50,9 @@ html, body {
 .blue{
   border: 2px solid blue;
 }
-
+.red{
+  background-color: ;
+}
 
 .rating input{
   display: none;
