tour page updated TODO tourpage homepage Testspecs

--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -5,12 +5,11 @@
 
 <div class="container">
   
-  <div class="row" >
+  <div class="row" id="headerArea">
     <div class="page-header">
       <h1 id="accountHeader">{{ tour.tour_name }} Tour</h1>
       <p id='{{ tour.tour_id }}' class="about">{{ tour.details }}.</p>
     </div>
-    
     
     <div class="col-6 tripInfo text-center">
         <h3>Trip Length: {{ tour.days }} days</h3>
@@ -18,13 +17,12 @@
       <div class="col-6 tripInfo text-center red">
         <h3>Start Date: {{ tour.dates.strftime("%m/%d/%Y") }}</h3>
       </div>
-      
-    
 
     <div class="col-12 text-center">
-    <input type="submit" value="Book Trip" class="btn btn-primary booked" id="booked">
-    <input type="submit" value="Save Trip" class="btn btn-light saved" id="saved">
-  </div>
+      <input type="submit" value="Book Trip" class="btn btn-primary booked" id="booked">
+      <input type="submit" value="Save Trip" class="btn btn-light saved" id="saved">
+    </div>
+    
 </div>
 
 <!-- Description and google API -->
