--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -86,9 +86,12 @@ html, body {
 
 #reviewArea {
   border: 1px solid rgba(200, 200, 200, 0.5);
-  /* width: 400px; */
   margin: 30px auto 30px;
   background-color: rgba(240, 240, 240, 0.6);
+}
+
+#headerArea{
+  margin: 30px auto 20px;
 }
 
 .sendgrid, .loginPage, #welcome, #accountHeader{
@@ -103,6 +106,11 @@ html, body {
 
 .spacing{
   margin: 50px auto 0px;
+}
+
+#spacer{
+  height: 50px;
+  background-color: red;
 }
 
 #accountHeader, .final{
@@ -140,9 +148,12 @@ html, body {
   overflow: hidden;
 }
 
-.carousel-inner {
-  
-  max-height: 300px;
+.quotes{
+  font-style:italic;
+}
+
+/* .carousel-inner {
+  max-height: 500px;
   img {
     max-height: 300px;
   }
@@ -151,9 +162,23 @@ html, body {
 
 .carousel-indicators img {
   max-height: 100px;
+} */
+
+local{
+  position: relative;
 }
 
-.quotes{
-  font-style:italic;
+#learnMore{
+  color: white;
 }
 
+.imageFont{
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  background-color: rgb(0,0,0,0.1);
+}
+
+.padBottom{
+  margin: 0px 0px 20px;
+}
+ 
