--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -35,7 +35,7 @@
     </div>
      <!--Form:submit button-->
      <p class="row loginPage final">
-        <input type="submit" value="Log In" class="btn btn-primary" id="login-button">
+        <input type="submit" value="Sign Up" class="btn btn-primary" id="login-button">
     </p>
     </form>
 </fieldset>
