--- a/templates/tour_details.html
+++ b/templates/tour_details.html
@@ -14,7 +14,7 @@
     <div class="col-6 tripInfo text-center">
         <h3>Trip Length: {{ tour.days }} days</h3>
       </div>
-      <div class="col-6 tripInfo text-center red">
+      <div class="col-6 tripInfo text-center">
         <h3>Start Date: {{ tour.dates.strftime("%m/%d/%Y") }}</h3>
       </div>
 
