--- a/templates/tours.html
+++ b/templates/tours.html
@@ -46,20 +46,26 @@
 <!-- Port Description & Image -->
 {% for tour in tours%}
 <div class="row" id="reviewArea">
-  <div class="col-12 col-md-6 col-lg-3">
-    <section class="sidebar">
-    <h5 id="accountHeader"><a href="/tours/{{ tour.tour_id }}">{{ tour.port_name }}<a></h5>
-    <hr class="mt-0 mb-4"/> 
-    <!-- linebreak above -->
-    <img src="/static/img/{{ tour.port_name.split()[-1] }}.jpeg" alt="{{ tour.port_name.split()[-1] }}">
-    <!-- <p>{{ tour.port_name.split()[-1] }}</p> -->
-  </section>
+  <div class="col-12 col-md-6 col-lg-9">
+    <div class='{{tour.port_id}} col text-center'>
+      <section class="portImage">
+        <h5 id="accountHeader"> <a href="/tours/{{ tour.tour_id }}">{{tour.port_name}}</a></h5>
+        <hr class="mt-0 mb-4"/> 
+        <div id="ports" class="{{tour.state_name}}">
+        <!-- linebreak above -->
+        <img class="image" src="/static/img/{{ tour.port_name.split()[-1] }}.jpeg" alt="{{ tour.port_name.split()[-1] }}">
+         <!-- <p>{{ tour.port_name.split()[-1] }}</p> -->
+         </div>
+         <p> </p>
+      </section>
+    </div>
   </div>
 
   <div class="col-12 col-md-6 col-lg-9">
     <div class='{{tour.port_id}}'>
-      <section class="images">
-        <h5 id="accountHeader">Features:</h5>
+      <section class="sidebar">
+        <h5 id="accountHeader">Features/Activities</h5>
+        <hr class="mt-0 mb-4"/> 
           <div id="images" class="{{tour.state_name}}"></div>
           <ul id="{{ tour.port_name.split()[-1] }}">
             <li>loops</li>
