finished tour design TODO filler quotes HOMEPAGE

--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -182,8 +182,16 @@ local{
   margin: 0px 0px 20px;
 }
  
-.images, .sidebar, .image{
-  min-width: 300px;
-  min-height: 300px;
+.images, .red, .image{
+  max-width: 225px;
+  max-height: 225px;
   border: 1px solid red;
+}
+
+.featureInput, .blue{
+  border: 1px solid blue;
+}
+
+.orange{
+  border: 1px solid orange;
 }
