--- a/templates/tours.html
+++ b/templates/tours.html
@@ -62,16 +62,14 @@
   </div>
 
   <div class="col-12 col-md-6 col-lg-9">
-    <div class='{{tour.port_id}}'>
-      <section class="sidebar">
+      <section class="sidebar blue">
         <h5 id="accountHeader">Features/Activities</h5>
         <hr class="mt-0 mb-4"/> 
-          <div id="images" class="{{tour.state_name}}"></div>
           <ul class="featureInput" id="{{ tour.port_name.split()[-1] }}">
             <li>loops</li>
           </ul>
       </section>
-    </div>
+    
   </div>
 </div>
 {% endfor %}
