--- a/templates/tours.html
+++ b/templates/tours.html
@@ -57,13 +57,14 @@
          <!-- <p>{{ tour.port_name.split()[-1] }}</p> -->
          </div>
          <p> </p>
+        
       </section>
     </div>
   </div>
 
   <div class="col-12 col-md-6 col-lg-9">
-      <section class="sidebar blue">
-        <h5 id="accountHeader">Features/Activities</h5>
+      <section class="sidebar">
+        <h5 id="accountHeader">Port Activities</h5>
         <hr class="mt-0 mb-4"/> 
           <ul class="featureInput" id="{{ tour.port_name.split()[-1] }}">
             <li>loops</li>
